@@ -48,6 +48,11 @@ public:
 
     void SetRange(int maximum);
 
+    // Return whether "Cancel" or "Skip" button was pressed, always return
+    // false if the corresponding button is not shown.
+    bool WasCancelled() const;
+    bool WasSkipped() const;
+
     // Must provide overload to avoid hiding it (and warnings about it)
     virtual void Update() { wxDialog::Update(); }
 
